# ansible-roles

./: .ansible-lint  .gitignore  .yamllint  CLAUDE.md  LICENSE  README.md  ansible.cfg  playbook-appserver.yml  playbook-desktop.yml  playbook-devel.yml  playbook-devstack.yml  playbook-docker-service.yml  playbook-gitlab.yml  playbook-lxd.yml  playbook-openshift.yml  playbook-sakuravps.yml  playbook-sample-spark.yml  playbook-server.yml  pyproject.toml  renovate.json  requirements.yml  site.yml
.github/workflows/: lint.yml  security.yml
filter_plugins/: shell_config.py
group_vars/: all  app.yml
home/: hosts-personal  playbook-desktop.yml  playbook-mbp.yml  playbook-server.yml
home/group_vars/: all
inventory/: hosts-gcloud  hosts-localvm  hosts-personal  hosts-sakuravps  hosts-samplevm  hosts-serversman  hosts-varidate  hosts-work
roles/android_studio/tasks/: main.yml
roles/android_studio/vars/: main.yml
roles/ansible/script/: install_Ubuntu.sh
roles/ansible/tasks/: devtools_Ubuntu.yml  install_Ubuntu.yml  main.yml
roles/apt/defaults/: main.yml
roles/apt/tasks/: main.yml
roles/apt/vars/: main.yml
roles/aqua/defaults/: main.yml
roles/aqua/files/: aqua.yaml
roles/aqua/tasks/: configure.yml  install_MacOSX.yml  install_Ubuntu.yml  main.yml
roles/awscli/: README.md
roles/dev-library/: README.md
roles/fluentd/: README.md
roles/gcloud/: README.md
roles/git/: README.md
roles/golang/: README.md
roles/homenas-client/: README.md
roles/python/: README.md
roles/ruby/: README.md
roles/terraform/: README.md
vps/: playbook-appserver.yml
(+308 files in other folders)
