[tool.poetry]
name = "ansible-roles"
version = "0.1.0"
description = "my ansible playbooks"
authors = ["thaim <thaim24@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.13"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^6.15.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
